src/scss/phy/my-progress.scss
@import "../common/my-progress";

.progress-gauge {
  font-family: $secondary-font;
  font-weight: 600;
  height: 140px;
  width: 140px;
  :is(b) {
    color: var(--color-brand-700);
    font-size: 32px;
    line-height: 32px;
    font-weight: 700;
  }
}

.attempts-over-time {
  min-height: 480px;
}

.legend-item {
  &::before {
    content: '';
    margin-right: 8px;
    height: 10px;
    width: 10px;
    background-color: var(--subject-color-300);
    border-radius: 50%;
    flex-shrink: 0;
  }

  display: flex;
  align-items: center;
  background-color: var(--color-neutral-50);
  padding: 4px 8px 4px 8px;
  border-radius: 5px;
}

